--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
     "start": "node app"
   },
   "dependencies": {
+    "aws-sdk": "^2.1448.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.5"
+    "mongoose": "^7.4.5",
+    "node-fetch": "2",
+    "uuid": "^9.0.0"
   }
 }
